--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "connect": "^3.7.0",
     "discord.js": "^11.5.1",
+    "log-timestamp": "^0.3.0",
     "serve-static": "^1.14.1",
     "util": "^0.12.1"
   }
