--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "thewalldiscordbot",
-  "version": "1.2",
+  "version": "1.2.0",
   "codeName": "[MOAR PAT PAT!]",
   "description": "Just a lil bot for The Wall",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "snyk-protect": "snyk protect",
-    "prepare": "npm run snyk-protect"
+    "prepare": "npm run snyk-protect",
+    "start": "node index.js",
+    "dev": "nodemon start"
   },
   "repository": {
     "type": "git",
@@ -28,16 +30,16 @@
   "dependencies": {
     "connect": "^3.7.0",
     "discord.js": "^11.5.1",
-    "dotenv": "^8.1.0",
+    "dotenv": "^8.2.0",
     "ffmpeg-binaries": "^4.0.0",
     "log-timestamp": "^0.3.0",
     "opusscript": "0.0.7",
+    "semver": "^6.3.0",
     "serve-static": "^1.14.1",
     "superagent": "^5.1.0",
     "util": "^0.12.1",
     "winston": "^3.2.1",
-    "ytdl-core": "^0.29.7",
-    "snyk": "^1.234.0"
+    "ytdl-core": "^0.29.7"
   },
   "snyk": true
 }
