update mongoose, glob, has-symbol

--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "fast-sort": "^2.0.1",
     "follow-redirects": "^1.9.0",
     "fs": "0.0.1-security",
+    "glob": "^7.1.6",
+    "has-symbols": "^1.0.1",
     "mongodb": "^3.4.1",
-    "mongoose": "^5.8.3",
+    "mongoose": "^5.8.11",
     "ms": "^2.1.2",
     "node-opus": "^0.3.3",
     "nodegit": "^0.26.4",
